--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Sam</string>
     <string name="title_activity_about">AboutActivity</string>
     <string name="title_activity_home">HomeActivity</string>
+    <string name="title_activity_introduction">IntroductionActivity</string>
 </resources>
