--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Firebase Auth\nSample</string>
+    <string name="app_name">E-FORUM</string>
     <string name="email">email</string>
     <string name="password">password</string>
     <string name="login">login</string>
